syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "API.Protos";

service LoanService {
	rpc GetAll (google.protobuf.Empty) returns (LoanResponse);
}

message LoanResponse {
	bool success = 1;
	repeated Loan loans = 2;
}

message Loan {
	int32 Id = 1;
	string name = 2;
}